--- a/submission/Mission_AI_Possible_Submission.html
+++ b/submission/Mission_AI_Possible_Submission.html
@@ -1094,7 +1094,7 @@
                             <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 80px; height: 80px; background: rgba(255,255,255,0.9); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2em;">▶️</div>
                         </div>
                         <p style="margin-top: 15px; color: #111827; font-weight: 600; font-size: 1.1em;">🎬 Sam Introduces the Platform</p>
-                        <p style="color: #6b7280; margin-top: 5px;">Team introduction and project overview</p>
+                        <p style="color: #6b7280; margin-top: 5px;">AI-generated team introduction and project overview</p>
                     </a>
                 </div>
 
