--- a/submission/Mission_AI_Possible_Submission.html
+++ b/submission/Mission_AI_Possible_Submission.html
@@ -1105,14 +1105,14 @@
                     <a href="https://www.youtube.com/watch?v=qQkp6xBqLgQ" target="_blank" rel="noopener" style="display: block; text-decoration: none;">
                         <div style="position: relative; overflow: hidden; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); transition: all 0.3s;">
                             <picture>
-                                <source srcset="https://img.youtube.com/vi/qQkp6xBqLgQ/mqdefault.jpg">
+                                <source srcset="https://nexusailab.netlify.app/submission/Chapter1.jpg">
                                 <img
-                                    src="https://img.youtube.com/vi/qQkp6xBqLgQ/hqdefault.jpg"
+                                    src="https://nexusailab.netlify.app/submission/Chapter1.jpg"
                                     alt="Chapter 1: Application Form Features"
                                     style="width:100%; display:block;"
                                     onerror="
-                                        if (this.dataset.step==='1') { this.src='https://img.youtube.com/vi/qQkp6xBqLgQ/mqdefault.jpg'; this.dataset.step='2'; }
-                                        else if (this.dataset.step==='2') { this.src='https://img.youtube.com/vi/qQkp6xBqLgQ/default.jpg'; this.dataset.step='3'; }
+                                        if (this.dataset.step==='1') { this.src='https://nexusailab.netlify.app/submission/Chapter1.jpg'; this.dataset.step='2'; }
+                                        else if (this.dataset.step==='2') { this.style.display='none'; this.dataset.step='3'; }
                                     "
                                     data-step="1"
                                 >
